# starman

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  run.sh  shell.nix
editor/: todo.txt
example/: main.cpp  proj.yaml
example/models/: simple_frog.stl
example/scenes/: scene.yaml
example/shaders/: normalDisplay.glsl
src/components/: mesh_renderer.hpp  rigidbody.hpp  spatial.hpp
src/core/: application.hpp  command_buffer.hpp  context.hpp  events.hpp  handle.hpp  material.hpp  mesh.hpp  render_utils.hpp  renderer.hpp  resource_pool.hpp  scene_graph.hpp  scene_manager.hpp  shader.hpp  texture.hpp
src/core/layers/: layer.hpp
src/core/layers/project/: project_layer.hpp
src/core/layers/render/: render_layer.hpp  renderer.hpp
src/core/layers/render/diligent/: diligent.hpp
src/core/layers/render/llgl/: llgl.hpp
src/core/layers/render/opengl/: opengl.hpp  opengl_renderer.hpp
src/core/layers/render/raylib/: raylib.hpp
src/core/layers/render/sdl/: sdl.hpp
src/core/layers/resource/: resource_layer.hpp
src/core/layers/scene/: scene_layer.hpp
src/core/math/: color.hpp  constants.hpp  matrix.hpp  number.hpp  quaternion.hpp  utilities.hpp  vector.hpp
src/core/rendering/opengl/: opengl_renderer.hpp
src/core/resources/: image.hpp  material.hpp  mesh.hpp  model.hpp  resource.hpp  scene.hpp  shader.hpp  texture.hpp
src/ecs/: ecs.hpp  system.hpp
src/ecs/components/: camera.hpp  camera_controller.hpp  celestial_body.hpp  directional_light.hpp  keplerian_orbiter.hpp  mesh_renderer.hpp  newtonian_orbiter.hpp  point_light.hpp  rigidbody.hpp  spatial.hpp  tag.hpp
src/ecs/systems/: camera_system.hpp  keplerian_orbit_system.hpp  nebula.hpp  newtonian_orbit_system.hpp  physics_system.hpp  render_system.hpp
src/scene/: loader.hpp  scene.hpp
src/systems/render/: render.hpp
src/systems/render/diligent/: diligent.hpp
src/systems/render/raylib/: raylib.hpp
src/systems/render/sdl/: sdl.hpp
